1.0.9: 2001-09-24
!!!	- bugfix: limitSize still was broken (Max Kirillov)
        - bugfix/feature: ColorScrollBarInactiveArrow
        - feature: continuous edge switching
        - bugfix: colored edge switching cursors
        - bugfix: COMPOUND_TEXT handling (Florin)
        - feature: HorizontalEdgeSwitch and VerticalEdgeSwitch
        - feature: LowerOnClickWhenRaised lower the active window when
          clicked again
        - bugfix: #445264 CenterMaximizedWindows=0 was broken
	- bugfix: dynamic chaning of client icons
	- bugfix: reparenting (aka. swallowing) should work now
	- bugfix: comments into config examples about discarding of changes
	- bugfix/feature: massive I18N cleanup: fallback to C locale;
		  proper dectection of multibyte mode; unicode conversion;
		  clean, C++ stylish font handling; ...
	- feature: added icesh - a command line window manager
	- bugfix: mailbox monitor falls back to /var/spool/mail/$LOGIN
		  when neither MailBoxPath nor $MAIL are set.
	- bugfix: use argv[0] to build the themes menu
	- enhanced "Starting icewm" section of INSTALL and added a section
	  describing how to setup Xft
	- experimental feature: antialiasing for icons and text;
		  configure with --enable-antialiasing and --enable-xfreetype;
		  --enable-antialiasing attempts to activate XFreeType support
		  implicitly; use the XFreeType option to disable XFreeType
		  support on runtime. Xnest (XFree86 4.1.0) crashes on startup 
		  when Xnest is invisible - why? Are there other X servers
		  with this problem?
	- feature: allow to toggle between environment and root property
		  base GNOME autodetection on compile time;
		  configure with --with-gnome-root-property[=atom] and
		  --without-gnome-root-property
	- feature: menu item to toggle doNotCover flag;
		  due some internas the window has to be sticky
		  (allWorkspaces flag) to let this option take effect.
	- feature: Move/Resize FX (experimental bloat);
		  options: MoveSizeFXFontName (string),