@@ -1,5 +1,6 @@
 1.0.9: 2001-09-24
-!!!	- bugfix: limitSize still was broken (Max Kirillov)
+	- bugfix: killed dangling WindowOptions::icon pointer in combineOptions
+	- bugfix: limitSize still was broken (Max Kirillov)
         - bugfix/feature: ColorScrollBarInactiveArrow
         - feature: continuous edge switching
         - bugfix: colored edge switching cursors
